# SpaX

./: .gitignore  CITATION.cff  Makefile  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  release.yml
examples/: 00_pydantic_migration.py  00_quickstart_minimal_overhead.ipynb  01_basic_config.py  01_conditional_parameters.ipynb  02_nested_config.py  03_inheritance.py  04_conditional_parameters.py  05_deep_nesting.py  06_chained_conditions.py  07_sampling.py  08_override_system.py  09_sanity_checking.py  10_optuna_integration.py  11_serialization.py  README.md
spax/: __init__.py  config.py  dependency_graph.py  graph_node.py  utils.py
spax/nodes/: __init__.py  base.py  config.py  fixed.py  spaces.py
spax/samplers/: __init__.py  base.py  random.py  trial.py
spax/spaces/: __init__.py  base.py  categorical.py  condition_base.py  conditional.py  conditions.py  factory.py  numeric.py
spax/spaces/conditions/: __init__.py  attribute_conditions.py  base.py  composite_conditions.py  object_conditions.py
tests/: test_conditional.py  test_conditions.py  test_config.py  test_dependency_graph.py  test_distributions.py  test_factory.py  test_integration.py  test_numeric.py  test_utils.py
tests/test_conditions/: test_attribute_conditions.py  test_composite_conditions.py  test_object_conditions.py
tests/test_config/: test_config_basic.py  test_config_inheritance.py  test_config_integration.py  test_config_nested.py  test_config_serialization.py  test_sampling.py
tests/test_nodes/: test_config_node.py  test_fixed_node.py  test_override.py  test_override_template.py  test_parameter_names.py  test_signatures.py  test_space_nodes.py
tests/test_samplers/: test_random_sampler.py  test_trial_sampler.py
tests/test_spaces/: test_categorical_spaces.py  test_conditional_spaces.py  test_numeric_spaces.py  test_space_factory.py
